--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "data-forge-redis",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "This library contains the redis extensions to Data-Forge that allow it to directly read dat from redis database in Node.js.",
     "main": "build/index.js",
     "types": "build/index.d.ts",
@@ -17,7 +17,7 @@
         "tw": "npm run test:watch",
         "test:watch": "nyc mocha --watch --opts ./src/test/mocha.opts",
         "api-docs": "typedoc --options typedoc.json --out docs/api ./src/index.ts",
-        "prepublishOnly": "npm run clean && npm run test && npm run build",
+        "prepublishOnly": "npm run clean && npm run build",
         "coveralls": "nyc report --reporter=text-lcov | coveralls"
     },
     "repository": {
@@ -25,7 +25,7 @@
         "url": "git+https://github.com/tyolab/data-forge-redis.git"
     },
     "keywords": [],
-    "author": "ashley@codecapers.com.au",
+    "author": "eric@tyo.com.au",
     "license": "MIT",
     "bugs": {
         "url": "https://github.com/tyolab/data-forge-fs/issues"
